# mlx-gen

./: Cargo.toml  HANDOFF.md  SC-3060-CUTOVER-HANDOFF.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: FLUX_DIVERGENCE_REPORT_2026-06-02.md  HANDOFF_EPIC3040.md  MODEL_ARCHITECTURE.md  SPIKE_ADVANCED_VIDEO_3040.md
gen-core/: Cargo.toml
gen-core/src/: caption.rs  error.rs  generator.rs  imageops.rs  lib.rs  media.rs  registry.rs  runtime.rs  tiling.rs  tokenizer.rs  train.rs  transform.rs  weightsmeta.rs
gen-core/src/train/: schedule.rs
mlx-gen-bernini/src/: forward.rs  guidance.rs  lib.rs  pipeline.rs  rope.rs  vae_preprocess.rs  vision.rs  vit_guidance.rs  vit_preprocess.rs
mlx-gen-bernini/tests/: vae_preprocess_parity.rs  vit_guidance_parity.rs
mlx-gen-chroma/src/: config.rs  model.rs  (+2 more)
mlx-gen-flux/: Cargo.toml
mlx-gen-flux/assets/: clip_tokenizer.json
mlx-gen-flux/src/: config.rs  ip_adapter.rs  lib.rs  loader.rs  model.rs  pipeline.rs  text_encoder.rs  transformer.rs
mlx-gen-flux/tests/: bf16_crossbuild_probe.rs  config.rs  e2e_real_weights.rs  full_real_weights.rs  generate_real_weights.rs  ip_generate_real_weights.rs  ip_image_encoder_real_weights.rs  perf.rs  registry.rs  text_real_weights.rs  tokenizer_parity.rs
mlx-gen-flux2/: Cargo.toml
mlx-gen-flux2/src/: adapters.rs  config.rs  lib.rs  loader.rs  model.rs  transformer.rs
mlx-gen-flux2/tests/: adapter_real_weights.rs  perf.rs  te_real_weights.rs
mlx-gen-lens/: Cargo.toml
mlx-gen-lens/src/: lib.rs  pipeline.rs  reasoner.rs  registry.rs  resolution.rs  text.rs  training.rs
mlx-gen-lens/src/dit/: attention.rs  block.rs  mod.rs  rope.rs  transformer.rs
mlx-gen-lens/src/text_encoder/: gpt_oss.rs
mlx-gen-lens/tests/: dit_parity.rs  dit_quant_parity.rs  e2e_parity.rs  reasoner_parity.rs  trainer_e2e.rs
mlx-gen-qwen-image/: Cargo.toml
mlx-gen-qwen-image/src/: control_transformer.rs  lib.rs  loader.rs  model.rs  model_control.rs  model_edit.rs  pipeline.rs  sampler.rs  vl_tokenizer.rs
mlx-gen-qwen-image/src/transformer/: feed_forward.rs  transformer.rs
mlx-gen-qwen-image/tests/: adapter_real_weights.rs  control_real_weights.rs  e2e_real_weights.rs  edit_real_weights.rs  lightning_parity.rs  lightning_render_real_weights.rs  perf.rs  sdpa_nax_repro.rs  vision_real_weights.rs
mlx-gen-sam2/: WEIGHTS.md
mlx-gen-sdxl/: Cargo.toml
mlx-gen-sdxl/src/: adapters.rs  inpaint.rs  ip_adapter.rs  lib.rs  loader.rs  model.rs  pipeline.rs  sampler.rs  text_encoder.rs  tokenizer.rs  training.rs  vae.rs  vision_encoder.rs
mlx-gen-sdxl/src/unet/: controlnet.rs  mod.rs  transformer.rs
mlx-gen-sdxl/tests/: accel_real_weights.rs  controlnet_real_weights.rs  e2e_real_weights.rs  img2img_real_weights.rs  inpaint_real_weights.rs  ip_adapter_real_weights.rs  lokr_real_weights.rs  lora_real_weights.rs  perf.rs  q8_1024_probe.rs  quant_real_weights.rs  unet_fp16_real_weights.rs
mlx-gen-seedvr2/: Cargo.toml
mlx-gen-seedvr2/src/: color.rs  config.rs  convert.rs  dit.rs  lib.rs  pipeline.rs  registry.rs  vae.rs  video.rs
mlx-gen-seedvr2/tests/: bench_phases.rs  convert_parity.rs  dit_parity.rs  e2e_parity.rs  quant_parity.rs  registry_e2e.rs  tiling_parity.rs  vae_parity.rs  video_parity.rs
mlx-gen-seedvr2/tools/: dump_seedvr2_goldens.py
mlx-gen-sensenova/: Cargo.toml
mlx-gen-sensenova/src/: config.rs  distill.rs  lib.rs  model.rs  runtime.rs  t2i.rs  text.rs
mlx-gen-sensenova/tests/: backbone_parity.rs  interleave_parity.rs  it2i_parity.rs  model_realweight.rs  quant_smoke.rs  runtime_parity.rs  t2i_parity.rs  vision_parity.rs  vqa_parity.rs
mlx-gen-z-image/: Cargo.toml
mlx-gen-z-image/src/: adapters.rs  attention.rs  context_block.rs  control_transformer.rs  feed_forward.rs  final_layer.rs  lib.rs  model.rs  model_control.rs  pipeline.rs  rope_embedder.rs  timestep_embedder.rs  training.rs  transformer.rs  transformer_block.rs
mlx-gen-z-image/src/text_encoder/: encoder.rs  mod.rs
mlx-gen-z-image/src/vae/: attention.rs  conv_layers.rs  decoder.rs  mid_block.rs  mod.rs  resnet_block.rs  up_decoder_block.rs  up_sampler.rs
mlx-gen-z-image/tests/: adapter_real_weights.rs  adapter_routing.rs  bench_z_image.rs  control_real_weights.rs  e2e_real_weights.rs  lokr_loader.rs  perf.rs  pipeline.rs  q8_xemb_diag.rs  qmm_smallk.rs  registry.rs  text_encoder.rs  trainer_e2e.rs  vae_decoder.rs  vae_submodules.rs  z_image_block.rs  z_submodules.rs  z_transformer.rs
mlx-gen-z-image/tests/fixtures/: lokr_adapter.safetensors  lokr_loader.safetensors  text_encoder.safetensors  vae_decoder.safetensors  vae_submodules.safetensors  z_latents.safetensors  z_submodules.safetensors  z_transformer.safetensors
src/: adapters.rs  caption.rs  error.rs  generator.rs  image.rs  lib.rs  nn.rs  quant.rs  runtime.rs  sampler.rs  tiling.rs  tokenizer.rs  train.rs  weights.rs
tests/: accel_sampler_parity.rs  lokr_loader.rs  quant_parity.rs  tokenizer_parity.rs  vae_submodules.rs  z_image_block.rs
tools/: build_flux_clip_tokenizer.py  build_kolors_tokenizer.py  build_qwen_tokenizer.py  clip_vit_l_parity_ref.py  convert_bisenet.py  convert_sam2_to_mlx.py  dump_bernini_vae_preprocess_golden.py  dump_bernini_vit_guidance_golden.py  dump_bf16_crossbuild_probe.py  dump_face_align_golden.py  dump_flux2_adapter_golden.py  dump_flux_tokenizer_battery.py  dump_instantid_openpose_golden.py  dump_ip_adapter_golden.py  dump_kolors_controlnet_golden.py  dump_kolors_img2img_golden.py  dump_kolors_ip_adapter_golden.py  dump_lens_dit_golden.py  dump_lens_e2e_golden.py  dump_lens_reasoner_golden.py  dump_lokr_loader.py  dump_ltx_av_lora_e2e_golden.py  dump_ltx_dit_golden.py  dump_ltx_e2e_golden.py  dump_ltx_i2v_golden.py  dump_quant.py  dump_qwen_control_golden.py  dump_qwen_control_residuals.py  dump_qwen_image_golden.py  dump_qwen_lightning_golden.py  dump_sam2_segmenter_golden.py  dump_sdxl_accel_golden.py  dump_sdxl_controlnet_golden.py  dump_sdxl_golden.py  dump_sdxl_img2img_golden.py  dump_sdxl_lokr_golden.py  dump_sdxl_lora_golden.py  dump_sdxl_quant_golden.py  dump_sdxl_unet_golden.py  dump_sdxl_unet_golden_fp16.py  (+14 more)
(+163 files in other folders)
