[workspace]
members = ["mlx-gen-z-image", "mlx-gen-qwen-image", "mlx-gen-flux"]
resolver = "2"

[package]
name = "mlx-gen"
version = "0.0.0"
edition = "2021"
description = "Rust-native generative image & video model inference on Apple MLX (work in progress; name reserved)."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "inference", "generative"]
categories = ["science"]
readme = "README.md"

[dependencies]
# mlx-rs fork pinned to our own GitHub copy by commit SHA (supply-chain capture — immune to the
# upstream fork being yanked/deleted). `pmetal-mlx-rs` is mlx-rs 0.25 whose mlx-sys builds MLX
# core v0.31.1 (vs upstream mlx-rs 0.25.3, welded to MLX 0.25.1 — 2–3.6× slower Metal kernels).
# The mlx-c C layer is a submodule of ml-explore/mlx-c (Apple) at v0.6.0; pmetal's delta is
# additive Rust bindings only. Aliased as `mlx-rs` so `use mlx_rs::…` is unchanged.
# SHA ecda3f46 = 4b43ffff (0.25.8) + the MLX 0.30.6→0.31.1 / mlx-c 0.5.0→0.6.0 bump (sc-2517);
# 0.31.1 is numerically identical to the Python fork's MLX 0.31.0 (exact parity). See sc-2352 / sc-2517.
mlx-rs = { package = "pmetal-mlx-rs", git = "https://github.com/michaeltrefry/mlx-rs", rev = "ecda3f4661ad7f7510b5568f1799d6092a424952" }
thiserror = "2"
# Link-time model registration (the DI-container stand-in; see docs/MODEL_ARCHITECTURE.md §4).
inventory = "0.3"
# HF tokenizers (same Rust core `transformers` wraps) — loads tokenizer.json directly.
# onig only (no progressbar/http): byte-level BPE for Qwen/CLIP/T5 needs just the regex.
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
