[workspace]
members = ["gen-core", "gen-core-testkit", "mlx-gen-z-image", "mlx-gen-qwen-image", "mlx-gen-sdxl", "mlx-gen-flux", "mlx-gen-flux2", "mlx-gen-ltx", "mlx-gen-wan", "mlx-gen-face", "mlx-gen-pulid", "mlx-gen-instantid", "mlx-gen-svd", "mlx-gen-joycaption", "mlx-gen-sam2", "mlx-gen-sam3", "mlx-gen-sensenova", "mlx-gen-kolors", "mlx-gen-chroma"]
resolver = "2"

# Single source of truth for the deps shared across the root and all 16 member crates (F-151). The
# next MLX/fork bump (sc-2517/2772/2781 etc.) is now a one-line edit here instead of 17 synchronized
# ones — a missed crate would otherwise produce two distinct `mlx-rs` builds, cross-crate `Array`
# type-mismatch errors, and a doubled (very expensive) MLX-from-source build. Members opt in with
# `<dep> = { workspace = true }`.
[workspace.dependencies]
# mlx-rs fork pinned to our own GitHub copy by commit SHA (supply-chain capture — immune to the
# upstream fork being yanked/deleted). `pmetal-mlx-rs` is mlx-rs 0.25 whose mlx-sys builds MLX
# core v0.31.1 (vs upstream mlx-rs 0.25.3, welded to MLX 0.25.1 — 2–3.6× slower Metal kernels).
# The mlx-c C layer is a submodule of ml-explore/mlx-c (Apple) at v0.6.0; pmetal's delta is
# additive Rust bindings only. Aliased as `mlx-rs` so `use mlx_rs::…` is unchanged.
# SHA e59ffd88 = 1f293623 + the sc-2781 MLX 0.31.1->0.31.2 bump (+ a TEMPORARY mlx-c fft FFTNorm patch
# so mlx-c 0.6.0 compiles against 0.31.2's new fft signature; the submodule stays pristine at Apple
# upstream v0.6.0, drop the patch once Apple tags a 0.31.2-compatible mlx-c). 1f293623 = ecda3f46
# (0.31.x bump, sc-2517) + metallib-search-path patch ONLY; the sc-2714/sc-2770 NAX dispatch-gate
# patches were REMOVED in sc-2772 — their root cause was the metal-kernel deployment target (the NAX
# matrix-unit `mpp::tensor_ops::matmul2d` is valid only for macOS >= 26.2; compiling at 26.0 miscompiled
# it to garbage for 16-bit). mlx-gen builds the kernels at 26.2 (.cargo/config.toml) so NAX 16-bit is
# correct + uses the faster matrix unit. Guarded by mlx-gen-qwen-image/tests/{bf16_matmul_sweep,sdpa_nax_repro}.
# MLX 0.31.2 matches the SceneWorks production/golden environments (byte-parity target). See sc-2352 / sc-2517 / sc-2714 / sc-2770 / sc-2772 / sc-2781.
# SHA 44929a00 = b6e4e56 + sc-5009: a Metal command-buffer error (GPU watchdog
# kIOGPUCommandBufferCallbackErrorTimeout / OOM) is detected inside a MTL completion handler on an
# internal Metal thread, where MLX's throw escaped a noexcept boundary -> std::terminate -> SIGABRT
# (non-recoverable worker kill). The new mlx-sys/patches/command-buffer-recoverable.patch records the
# error and re-throws it synchronously on the waiting thread (eval -> Result::Err) instead. Pure
# MLX-core-patch change; no Rust API moved, so the worker import surface is unchanged.
mlx-rs = { package = "pmetal-mlx-rs", git = "https://github.com/michaeltrefry/mlx-rs", rev = "44929a001ab8a8837403a71c65cf064224de0cdc" }
# Backend-neutral contract layer (epic 3720). Workspace member; mlx-gen re-exports it so the old
# `mlx_gen::…` paths keep resolving. Family crates depend on it for `gen_core::Result` at the
# contract boundary.
sceneworks-gen-core = { path = "gen-core" }
# Contract conformance suite (epic 3720, sc-4481). Zero tensor deps; family crates dev-depend on it
# to run their real model through the backend-neutral checks (cancel/progress/seed/capabilities).
sceneworks-gen-core-testkit = { path = "gen-core-testkit" }
thiserror = "2"
# Link-time model registration (the DI-container stand-in; see docs/MODEL_ARCHITECTURE.md §4).
inventory = "0.3"
# HF tokenizers (same Rust core `transformers` wraps) — loads tokenizer.json directly.
# onig only (no progressbar/http): byte-level BPE for Qwen/CLIP/T5 needs just the regex.
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
# Backend-neutral safetensors header/byte-view reader (gen-core weightsmeta, sc-3722) — keys, dtypes,
# shapes, raw byte ranges WITHOUT a tensor library. Candle reads torch safetensors through this seam;
# mlx-gen keeps its mlx-rs full-checkpoint loader and uses this for adapter/metadata inspection.
safetensors = "0.4"

[package]
name = "mlx-gen"
version = "0.0.0"
edition = "2021"
description = "Rust-native generative image & video model inference on Apple MLX (work in progress; name reserved)."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "inference", "generative"]
categories = ["science"]
readme = "README.md"

[dependencies]
# Shared pins live in [workspace.dependencies] above (F-151).
mlx-rs = { workspace = true }
sceneworks-gen-core = { workspace = true }
thiserror = { workspace = true }
inventory = { workspace = true }
tokenizers = { workspace = true }
