[package]
name = "mlx-gen-flux2"
version = "0.0.0"
edition = "2021"
description = "FLUX.2-klein provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "flux", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { package = "pmetal-mlx-rs", git = "https://github.com/michaeltrefry/mlx-rs", rev = "31d60dcb2888f9a447148296524ee5a6b3b957b5" }
# Link-time self-registration into mlx-gen's model registry.
inventory = "0.3"

[dev-dependencies]
# PNG dump of the Rust render for visual inspection in the e2e parity test (later slices).
image = { version = "0.25", default-features = false, features = ["png"] }
