[package]
name = "mlx-gen-sdxl"
version = "0.0.0"
edition = "2021"
description = "Stable Diffusion XL (SDXL) U-Net provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "sdxl", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { package = "pmetal-mlx-rs", git = "https://github.com/michaeltrefry/mlx-rs", rev = "31d60dcb2888f9a447148296524ee5a6b3b957b5" }
# Link-time self-registration into mlx-gen's model registry.
inventory = "0.3"
# SDXL ships a CLIP tokenizer as vocab.json + merges.txt (no tokenizer.json), and the vendored
# reference uses Apple's simplified CLIP BPE with `\p{L}`/`\p{N}` unicode-class splitting. We port
# that tokenizer to match the reference IDs exactly; `regex` provides the unicode-property pattern.
regex = "1"
# Parse vocab.json (a flat {token: id} object) without pulling a heavy dep.
serde_json = "1"

[dev-dependencies]
# Save the end-to-end render as a PNG for visual inspection (ignored real-weights test only).
image = { version = "0.25", default-features = false, features = ["png"] }
